--- a/scss/3-components/_services.scss
+++ b/scss/3-components/_services.scss
@@ -83,8 +83,8 @@
 
     &__card {
         box-shadow: 0 10px 30px 0 #d0d8ead9;
-        padding: 2vh 5vw;
-        min-height: 30vh;
+        padding: 2vh 3vw;
+        height: 30vh;
         
     }
 
